integtest/manifests/add-nlb-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-service-2
  annotations:
    service.beta.kubernetes.io/exoscale-loadbalancer-zone: "de-fra-1"
    service.beta.kubernetes.io/exoscale-loadbalancer-name: "$EXOSCALE_LB_NAME"
    service.beta.kubernetes.io/exoscale-loadbalancer-service-name: "$EXOSCALE_LB_SERVICE_NAME2"
    service.beta.kubernetes.io/exoscale-loadbalancer-service-strategy: "source-hash"
    service.beta.kubernetes.io/exoscale-loadbalancer-service-description: "description-nlb-service"
    service.beta.kubernetes.io/exoscale-loadbalancer-service-healthcheck-mode: "http"
    service.beta.kubernetes.io/exoscale-loadbalancer-service-healthcheck-uri: "/"
    service.beta.kubernetes.io/exoscale-loadbalancer-service-healthcheck-interval: "11s"
    service.beta.kubernetes.io/exoscale-loadbalancer-service-healthcheck-timeout: "6s"
    service.beta.kubernetes.io/exoscale-loadbalancer-service-healthcheck-retries: "2"
spec:
  selector:
    app: nginx
  type: LoadBalancer
  ports:
  - name: service
    protocol: TCP
    port: 8080
    targetPort: 80
