integtest/manifests/create-nlb.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  annotations:
    service.beta.kubernetes.io/exoscale-loadbalancer-zone: "de-fra-1"
    service.beta.kubernetes.io/exoscale-loadbalancer-name: "$EXOSCALE_LB_NAME"
    service.beta.kubernetes.io/exoscale-loadbalancer-service-name: "$EXOSCALE_LB_SERVICE_NAME1"
spec:
  selector:
    app: nginx
  type: LoadBalancer
  ports:
  - name: service
    protocol: TCP
    port: 80
    targetPort: 80
